feat: name-as-key dependency format in jk.toml
Replaces v0.6's `"group:artifact:version"` string arrays with
sub-tables keyed by a user-chosen short name:

  [dependencies.main]
  jackson-databind = { group = "com.fasterxml.jackson.core", version = "2.18.2" }
  jk-core.workspace = true   # resolved via [workspace.dependencies] or siblings

The name decouples a local identifier (the manifest interface) from
the Maven coordinate (a resolution detail). It enables short
references in features/source-sets/audits, readable lockfiles, a
future curated registry for `jk add jackson-databind`, and per-dep
metadata as natural table fields rather than coord-string hacks.

Other changes:
- artifact defaults to the table key when omitted (Cargo-style)
- path/git sources move inline to the dep table; [sources] removed
- [workspace.dependencies] for shared external deps; children
  inherit via `name.workspace = true`
- workspace siblings auto-resolve by short name against members'
  [project].artifact
- pinned vs floating is now expressed by the version selector
  ("1.2.3" = caret per v1 lock; "=1.2.3" = pinned)

Full spec: docs/artifact-coord-design.md.

Migrated all 10 of the project's own jk.toml files; updated
parser/editor/renderer/importers/scaffolder/add/remove and their
tests. Updated requirements.md and comparison.md to match.

No backwards compatibility — pre-release.